# async-architecture-course

apps/accounting-service/: requirements.txt
apps/accounting-service/accounting/: admin.py  models.py  services.py
apps/accounting-service/config/: settings.py  urls.py
apps/accounting-service/tests/: test_complete_task.py  test_incorrect_event.py  test_reshuffle_tasks.py  test_task_assigned.py
apps/analytics-service/analytics/: models.py  services.py  views.py
apps/analytics-service/config/: settings.py  urls.py
apps/analytics-service/tests/: conftest.py  (+5 more)
apps/event_schema_registry/: .gitignore  pyproject.toml
apps/event_schema_registry/event_schema_registry/: validate_schema.py
apps/event_schema_registry/event_schema_registry/schemas/accounting/accrued/: 1.json
apps/event_schema_registry/event_schema_registry/schemas/accounting/written_off/: 1.json
apps/event_schema_registry/event_schema_registry/schemas/auth/registered/: 1.json
apps/event_schema_registry/event_schema_registry/schemas/task/added/: 1.json  2.json  3.json
apps/event_schema_registry/event_schema_registry/schemas/task/assigned/: 1.json
apps/event_schema_registry/event_schema_registry/schemas/task/completed/: 1.json
apps/event_schema_registry/event_schema_registry/schemas/task/shuffled/: 1.json
apps/task-service/: requirements.txt
apps/task_service/: README.md  alembic.ini  pyproject.toml
apps/task_service/app/: __init__.py  __main__.py  conftest.py  settings.py
apps/task_service/app/db/: base.py  utils.py
apps/task_service/app/db/migrations/: env.py
apps/task_service/app/db/models/: __init__.py
apps/task_service/app/services/: __init__.py
apps/task_service/app/tests/: __init__.py
apps/task_service/app/web/: __init__.py  application.py  lifetime.py
apps/task_service/app/web/api/: __init__.py  router.py
apps/task_service/app/web/api/monitoring/: __init__.py
week_0/: README.md
week_1/: README.md
week_3/: README.md
week_4/: README.md
(+42 files in other folders)
